# 384-A-Learned-Index-for-Exact-Similarity-Search-in-Metric-Spaces

./: citation.txt
LIMS/: CMakeLists.txt  Makefile  README.md  main.cpp
LIMS/caculateRef/: CaculateIValue.h  ChooseRef.h
LIMS/common/: CalCirclePos.h
LIMS/entities/: Reference.h
LIMS/fileIO/: FileIO.cpp  FileIO.h
LIMS/inputFiles/ref/: ref_0.txt  ref_1.txt  ref_2.txt
LIMS/model/: PolynomialRegression.h
